# Vault-Game

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/scripts/: set-mega-challenge.mjs  setup-mega-vault.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(console)/: layout.tsx
frontend/src/app/(console)/admin/: page.tsx
frontend/src/app/(console)/cancel/: page.tsx
frontend/src/app/(console)/claim/: page.tsx
frontend/src/app/(console)/config/: page.tsx
frontend/src/app/(console)/crack/: page.tsx
frontend/src/app/(console)/create/: page.tsx
frontend/src/app/(console)/help/: page.tsx
frontend/src/app/(console)/hints/: page.tsx
frontend/src/app/(console)/logs/: page.tsx
frontend/src/app/(console)/lore/: page.tsx
frontend/src/app/(console)/profile/: page.tsx
frontend/src/app/(console)/vault/[id]/: page.tsx
frontend/src/app/(console)/vaults/: page.tsx
frontend/src/components/console/: ConsoleFrame.tsx  GlobalAttemptBanner.tsx  MatrixRain.tsx  NavigatorPrompt.tsx  Sparkline.tsx  TutorialOverlay.tsx  WinFanfareOverlay.tsx
frontend/src/components/solana/: SolanaProviders.tsx
frontend/src/lib/: anchor.ts  globalState.ts  megaChallenge.ts  modules.ts  playerProfile.ts  rank.ts  time.ts  useMegaChallenge.ts  usePlayerProfile.ts  useVaultTelemetry.ts  vault.ts
programs/vault_game/: Cargo.toml  Xargo.toml
programs/vault_game/src/: lib.rs
