[package]
name = "vault_game"
version = "0.1.0"
description = "VaultCrack: on-chain vault game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# Pin transitive blake3 away from 1.8.3 (edition2024) so Solana 1.18.x build toolchain can resolve.
blake3 = "=1.8.2"
