[package]
name = "vault_game"
version = "0.1.0"
description = "VaultCrack: on-chain vault game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# Required by Anchor >=0.30 for `anchor build` / IDL generation.
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
# Needed for hashing secrets under solana-program v2.x
solana-hash = "2.3.0"
solana-sha256-hasher = "2.3.0"
# Pin transitive blake3 away from 1.8.3 (edition2024) so Solana 1.18.x build toolchain can resolve.
blake3 = "=1.8.2"
